<resources>
    <string name="app_name">AndroidPVT</string>
    <string name="Hello_Dmitry"> Hello Dmitry!!! </string>
    <string name="Take_it_easy"> Take it easy!!! </string>
    <string name="Set"> Set </string>
    <string name="GoHome"> Go Home </string>

    <string name="Homework1"> Homework1 </string>
    <string name="Homework2"> Homework2 </string>
    <string name="Homework3"> Homework3 </string>
    <string name="Homework4"> Homework4 </string>
    <string name="Homework5"> Homework5 </string>
    <string name="Homework6"> Homework6 </string>

    <string name="Download"> Download </string>
    <string name="Link_to_picture"> Link to picture </string>
</resources>
