<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06ef0e"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Homework1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Homework2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="164dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Homework3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="235dp" />

</android.support.constraint.ConstraintLayout>